[project]
name = "distance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.0.7",
    "orjson==3.10.10",
    "pika==1.3.2",
    "pydantic==2.9.0",
    "pydantic-core==2.23.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tornado==6.4.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "jedi>=0.19.2",
    "parso>=0.8.5",
    "responses>=0.25.8",
]
